[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/SceneOptionButton.gd" type="Script" id=1]
[ext_resource path="res://addons/controller_icons/assets/key/1.png" type="Texture" id=2]

[node name="SceneOptionButton" type="Button"]
margin_right = 157.0
margin_bottom = 26.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "Meow"
icon = ExtResource( 2 )
clip_text = true
expand_icon = true
script = ExtResource( 1 )
path = "ingame_option_a0"

[connection signal="focus_exited" from="." to="." method="_on_SceneOptionButton_focus_exited"]
[connection signal="mouse_exited" from="." to="." method="_on_SceneOptionButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_SceneOptionButton_pressed"]
